# eolie

./: .buildconfig  .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS  Makefile.am  README.md  autogen.sh  configure.ac  eolie.in  generate_data.sh  icons.sh  meson.build  meson_fix_pygobject.py  meson_options.txt  org.gnome.Eolie.json  pygobject-3.26.0.tar.xz  python-gobject-fix-segfault.diff  requirements.txt  run.sh  update_translations.sh
.github/: ISSUE_TEMPLATE
.gitlab/: ISSUE_TEMPLATE
.gitlab/issue_templates/: Bug.md  Feature.md
.tx/: config
data/: AboutDialog.ui.in  ActionsMenu.ui  AdblockMenu.ui  Appmenu.ui  BlockMenu.ui  BookmarkEdit.ui  BookmarkRatingWidget.ui  ClearData.ui  DialogClearData.ui  DialogCookies.ui  DialogCredentials.ui  DialogModifyUA.ui  DialogNotifications.ui  DialogSearchEngine.ui  Extensions.js  Facebook_adblock.js  ImageBlockMenu.ui  ImportBookmarks.ui  JSBlockMenu.ui  Languages.ui  LanguagesMenu.ui  Makefile.am  ModifyUA.ui  PagesManagerChild.ui  PanelMenu.ui  PopoverCookies.ui  PopoverCredentials.ui  PopoverDownloads.ui  PopoverGeolocation.ui  PopoverImages.ui  PopoverJavaScript.ui  PopoverPasswords.ui  PopoverSyncAuth.ui  PopoverUri.ui  PopoverWebView.ui  PopupBlockMenu.ui  QuitDialog.ui  Readability.js  Readability_check.js  Readability_get.js  (+27 more)
data/icons/hicolor/: icons.sh
data/javascript/: FormMenu.js  GetCSS.js  GetScripts.js  HandleInput.js  HandleInputNext.js  HandleInputPrev.js  InjectCSS.js  Insecure.js  NightMode.js  Selection.js  SetForms.js  Submit.js
data/night-mode/: mail.google.com.css  night-mode.css  planet.gnome.org.css  planet.webkitgtk.org.css  www.youtube.com.css
eolie/: app_notification.py  application.py  application_night.py  art.py  container.py  container_expose.py  container_notification.py  container_overlay.py  container_reading.py  container_sidebar.py  container_stack.py  container_view.py  container_webview.py  content_blocker.py  content_blocker_ad.py  content_blocker_ad_exceptions.py  content_blocker_exceptions.py  content_blocker_images.py  content_blocker_medias.py  content_blocker_phishing.py  content_blocker_popups.py  content_blocker_scripts.py  context.py  css_rule_import.py  css_rule_list.py  css_rule_media.py  css_rule_style.py  css_rule_supports.py  css_stylesheet.py  css_stylesheets.py  database_adblock.py  database_bookmarks.py  database_exceptions.py  database_history.py  database_phishing.py  database_settings.py  database_upgrade.py  define.py  dialog_clear_data.py  dialog_cookies.py  (+105 more)
hooks/: pre-commit.archlinux  pre-commit.debian  pre-commit.fedora  pre-commit.solus  pre-commit.ubuntu
python-webextension/: Makefile.am  extension.py.in  meson.build  pythonloader.c.in
search-provider/: Makefile.am  eolie-sp.in  meson.build  org.gnome.Eolie.SearchProvider.ini  org.gnome.Eolie.SearchProvider.service.in
src/: Makefile.am  application.py  art.py  container.py  context.py  database_adblock.py  database_bookmarks.py  database_exceptions.py  database_extensions.py  database_filechooser.py  database_history.py  database_phishing.py  database_pishing.py  database_settings.py  database_upgrade.py  dbus_helper.py  define.py  dialog_clear_data.py  dialog_import_bookmarks.py  dialog_search_engine.py  download_manager.py  downloads_manager.py  extension_adblock.py  extension_forms.py  extension_proxy.py  helper_dbus.py  helper_passwords.py  helper_task.py  label_indicator.py  languages.py  menu_closed.py  menu_form.py  menu_history.py  menu_pages.py  menu_sites.py  mozilla_sync.py  page_overlay_child.py  pages_manager.py  pages_manager_child.py  pages_manager_flowbox.py  (+40 more)
