appdir = $(pythondir)/eolie/

app_PYTHON = \
    application.py\
    art.py\
    container.py\
    context.py\
    database_adblock.py\
    database_bookmarks.py\
    database_exceptions.py\
    database_filechooser.py\
    database_history.py\
    database_pishing.py\
    dbus_helper.py\
    dialog_clear_data.py\
    dialog_import_bookmarks.py\
    download_manager.py\
    define.py\
    extension_adblock.py\
    extension_forms.py\
    extension_proxy.py\
    localized.py\
    menu_history.py\
    menu_pages.py\
    mozilla_sync.py\
    popover_cookies.py\
    popover_downloads.py\
    popover_images.py\
    popover_javascript.py\
    popover_password.py\
    popover_sync_auth.py\
    popover_uri.py\
    popover_webview.py\
    search.py\
    settings.py\
    stacksidebar.py\
    stacksidebar_child.py\
    sqlcursor.py\
    utils.py\
    toolbar.py\
    toolbar_actions.py\
    toolbar_end.py\
    toolbar_title.py\
    view.py\
    view_web.py\
    view_web_navigation.py\
    view_web_errors.py\
    widget_edit_bookmark.py\
    widget_find.py\
    window.py
