appdir = $(pythondir)/eolie/

app_PYTHON = \
    application.py\
    art.py\
    container.py\
    context.py\
    database_adblock.py\
    database_bookmarks.py\
    database_exceptions.py\
    database_history.py\
    database_phishing.py\
    database_settings.py\
    dialog_clear_data.py\
    dialog_import_bookmarks.py\
    dialog_search_engine.py\
    download_manager.py\
    define.py\
    extension_adblock.py\
    extension_forms.py\
    extension_proxy.py\
    helper_dbus.py\
    helper_passwords.py\
    helper_task.py\
    label_indicator.py\
    languages.py\
    list.py\
    localized.py\
    menu_form.py\
    menu_history.py\
    menu_pages.py\
    mozilla_sync.py\
    pages_manager.py\
    pages_manager_child.py\
    popover_cookies.py\
    popover_credentials.py\
    popover_downloads.py\
    popover_geolocation.py\
    popover_images.py\
    popover_javascript.py\
    popover_passwords.py\
    popover_uri.py\
    popover_webview.py\
    search.py\
    settings.py\
    sites_manager.py\
    sites_manager_child.py\
    sqlcursor.py\
    utils.py\
    toolbar.py\
    toolbar_actions.py\
    toolbar_end.py\
    toolbar_title.py\
    view.py\
    view_web.py\
    view_web_navigation.py\
    view_web_errors.py\
    view_web_signals_handler.py\
    widget_edit_bookmark.py\
    widget_find.py\
    window.py
